kubernetes/apps/default/nextcloud/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-languagetool
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
    - name: http
      port: 8010
      targetPort: 8010
